--- a/sber/main/index.html
+++ b/sber/main/index.html
@@ -10,6 +10,18 @@
   <body>
 
     <div class="transaction">
+
+      <div class="css-modal-details">    
+          <details>
+              <summary>История</summary>
+              <div class="cmc">
+                  <div class="cmt">
+                      <p class="prov"></p>        
+                  </div>
+              </div>
+          </details>
+      </div>
+
       <div class="tog">
         <h2>Выбранный адрес:</h2>
         <select id="toggle" class="select"></select>
